--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -1,4 +1,4 @@
 gettingStarted:
-  title: Retreiving Config Values
+  title: Retrieving Config Values
 helpWithGrails:
   title: Do you need help with Grails?
