--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ githubSlug=grails-guides/grails-quickcasts-retrieving-config-values
 githubBranch=master
 category=Advanced Grails
 tags=quickcast,configuration
+publicationDate=1 Sep 2016
